Fix: Add a universal wrap class

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -17,3 +17,10 @@ body {
 #root {
 	min-height: 100vh;
 }
+
+.wrap {
+	padding-left: 20px;
+	padding-right: 20px;
+	max-width: 410px;
+	margin: 0 auto;
+}
