--- a/src/styles/components/_page-wrap.scss
+++ b/src/styles/components/_page-wrap.scss
@@ -35,7 +35,6 @@
 }
 
 .page-wrap__wrap {
-	padding: 4vw 20px;
-	max-width: 410px;
-	margin: 0 auto;
+	padding-top: 4vw;
+	padding-bottom: 4vw;
 }
